Continua la creacion del Script

--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -26,14 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|---------------------Categorias capturadas correctamente.---------------------|\n"
+      "|---------------------Categorias capturadas correctamente.---------------------|\n",
+      "|-----------------------Categorias demoro 9.85 segundos-----------------------|\n"
      ]
     }
    ],
@@ -43,38 +44,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|---Todas las peliculas de la categoria 'history' capturadas correctamente.---|\n",
-      "|--Todas las peliculas de la categoria 'biography' capturadas correctamente.--|\n",
-      "|---Todas las peliculas de la categoria 'fantasy' capturadas correctamente.---|\n",
-      "|----Todas las peliculas de la categoria 'family' capturadas correctamente.----|\n",
-      "|--Todas las peliculas de la categoria 'adventure' capturadas correctamente.--|\n",
-      "|--Todas las peliculas de la categoria 'animation' capturadas correctamente.--|\n",
-      "|----Todas las peliculas de la categoria 'crime' capturadas correctamente.----|\n",
-      "|----Todas las peliculas de la categoria 'action' capturadas correctamente.----|\n",
-      "|----Todas las peliculas de la categoria 'horror' capturadas correctamente.----|\n",
-      "|---Todas las peliculas de la categoria 'musical' capturadas correctamente.---|\n",
-      "|-----Todas las peliculas de la categoria 'news' capturadas correctamente.-----|\n",
-      "|--Todas las peliculas de la categoria 'reality_tv' capturadas correctamente.--|\n",
-      "|----Todas las peliculas de la categoria 'music' capturadas correctamente.----|\n",
-      "|----Todas las peliculas de la categoria 'comedy' capturadas correctamente.----|\n",
-      "|---Todas las peliculas de la categoria 'mystery' capturadas correctamente.---|\n",
-      "|----Todas las peliculas de la categoria 'sci_fi' capturadas correctamente.----|\n",
-      "|---Todas las peliculas de la categoria 'romance' capturadas correctamente.---|\n",
-      "|-----Todas las peliculas de la categoria 'war' capturadas correctamente.-----|\n",
-      "|---Todas las peliculas de la categoria 'western' capturadas correctamente.---|\n",
-      "|-Todas las peliculas de la categoria 'documentary' capturadas correctamente.-|\n",
-      "|----Todas las peliculas de la categoria 'sport' capturadas correctamente.----|\n",
-      "|---Todas las peliculas de la categoria 'thriller' capturadas correctamente.---|\n",
-      "|Todas las peliculas de la categoria 'european_production' capturadas correctamente.|\n",
-      "|----Todas las peliculas de la categoria 'drama' capturadas correctamente.----|\n",
-      "|----Todas las peliculas de la categoria 'short' capturadas correctamente.----|\n"
+      "|Todas las peliculas de la categoria 'history' capturadas correctamente, demoro 35.24 segundos|\n",
+      "|Todas las peliculas de la categoria 'biography' capturadas correctamente, demoro 38.04 segundos|\n",
+      "|Todas las peliculas de la categoria 'adventure' capturadas correctamente, demoro 38.69 segundos|\n",
+      "|Todas las peliculas de la categoria 'family' capturadas correctamente, demoro 39.64 segundos|\n",
+      "|Todas las peliculas de la categoria 'fantasy' capturadas correctamente, demoro 40.5 segundos|\n",
+      "|Todas las peliculas de la categoria 'crime' capturadas correctamente, demoro 42.6 segundos|\n",
+      "|Todas las peliculas de la categoria 'animation' capturadas correctamente, demoro 45.54 segundos|\n",
+      "|Todas las peliculas de la categoria 'action' capturadas correctamente, demoro 49.0 segundos|\n",
+      "|Todas las peliculas de la categoria 'musical' capturadas correctamente, demoro 14.7 segundos|\n",
+      "|Todas las peliculas de la categoria 'reality_tv' capturadas correctamente, demoro 13.89 segundos|\n",
+      "|Todas las peliculas de la categoria 'news' capturadas correctamente, demoro 14.99 segundos|\n",
+      "|Todas las peliculas de la categoria 'music' capturadas correctamente, demoro 22.77 segundos|\n",
+      "|Todas las peliculas de la categoria 'horror' capturadas correctamente, demoro 66.33 segundos|\n",
+      "|Todas las peliculas de la categoria 'mystery' capturadas correctamente, demoro 31.0 segundos|\n",
+      "|Todas las peliculas de la categoria 'sci_fi' capturadas correctamente, demoro 30.89 segundos|\n",
+      "|Todas las peliculas de la categoria 'comedy' capturadas correctamente, demoro 84.52 segundos|\n",
+      "|Todas las peliculas de la categoria 'western' capturadas correctamente, demoro 14.65 segundos|\n",
+      "|Todas las peliculas de la categoria 'war' capturadas correctamente, demoro 18.56 segundos|\n",
+      "|Todas las peliculas de la categoria 'romance' capturadas correctamente, demoro 38.66 segundos|\n",
+      "|Todas las peliculas de la categoria 'sport' capturadas correctamente, demoro 26.06 segundos|\n",
+      "|Todas las peliculas de la categoria 'documentary' capturadas correctamente, demoro 105.41 segundos|\n",
+      "|Todas las peliculas de la categoria 'thriller' capturadas correctamente, demoro 47.57 segundos|\n",
+      "|Todas las peliculas de la categoria 'european_production' capturadas correctamente, demoro 50.9 segundos|\n",
+      "|Todas las peliculas de la categoria 'short' capturadas correctamente, demoro 83.7 segundos|\n",
+      "|Todas las peliculas de la categoria 'drama' capturadas correctamente, demoro 147.16 segundos|\n",
+      "4610\n"
      ]
     }
    ],
@@ -85,6 +87,8 @@
     "\n",
     "# Crear un diccionario para almacenar los resultados\n",
     "resultados_dict = {}\n",
+    "\n",
+    "categorias_comienzo = time.time()\n",
     "\n",
     "with ThreadPoolExecutor(max_workers=num_nucleos) as executor:\n",
     "    # Ejecutar la función para cada categoría en paralelo\n",
@@ -99,9 +103,12 @@
     "for x,i in resultados_dict.items():\n",
     "    for e in i:\n",
     "        peliculas_total.append(e)\n",
-    "        \n",
+    "\n",
     "peliculas_total = set(peliculas_total)\n",
-    "\n"
+    "\n",
+    "categorias_fin = time.time()\n",
+    "\n",
+    "print_process(f\"La extraccion total de las categorias tubo una demora de {round((categorias_fin-categorias_comienzo),2)}\")\n"
    ]
   },
   {
@@ -110,37 +117,258 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "peliculas_total_test = peluc"
+    "peliculas_total = [x for x in peliculas_total if \"/content/\" in x]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear un diccionario para almacenar los resultados\n",
+    "json_peliculas = {\"titulo\": [], \"ano\": [], \"duracion\": [], \"categorias\": [], \"descripcion\": [], \"tipo\": [], \"link\": []}\n",
+    "\n",
+    "with ThreadPoolExecutor(max_workers=num_nucleos) as executor:\n",
+    "    # Ejecutar la función para cada categoría en paralelo\n",
+    "    resultados = list(executor.map(movies, peliculas_total))\n",
+    "\n",
+    "    for resultado in resultados:\n",
+    "        for clave, valor in resultado.items():\n",
+    "            json_peliculas[clave].append(valor)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe = pd.DataFrame(json_peliculas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>titulo</th>\n",
+       "      <th>ano</th>\n",
+       "      <th>duracion</th>\n",
+       "      <th>categorias</th>\n",
+       "      <th>descripcion</th>\n",
+       "      <th>tipo</th>\n",
+       "      <th>link</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Dear Sidewalk</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>86 min</td>\n",
+       "      <td>Comedy, Drama, Romance</td>\n",
+       "      <td>Dear Sidewalk tells the story of Gardner, a 24...</td>\n",
+       "      <td>Pelicula</td>\n",
+       "      <td>https://filmzie.com/content/dear-sidewalk-2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>C-Bar</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>0 min</td>\n",
+       "      <td>Western</td>\n",
+       "      <td>After a young girl's family is brutally murder...</td>\n",
+       "      <td>Serie</td>\n",
+       "      <td>https://filmzie.com/content/c-bar-2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Good Night Sarajevo</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>52 min</td>\n",
+       "      <td>Documentary, European Production</td>\n",
+       "      <td>Good night, Sarajevo: Bosnian journalist Boban...</td>\n",
+       "      <td>Pelicula</td>\n",
+       "      <td>https://filmzie.com/content/good-night-sarajevo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Tunnelrat</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>17 min</td>\n",
+       "      <td>Drama, War, Short, European Production</td>\n",
+       "      <td>Amidst World War I, two enemy soldiers find th...</td>\n",
+       "      <td>Pelicula</td>\n",
+       "      <td>https://filmzie.com/content/tunnelrat-2008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5 Shells</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>87 min</td>\n",
+       "      <td>Drama, Family, Sci-Fi</td>\n",
+       "      <td>In a post-apocalyptic wasteland, a young girl ...</td>\n",
+       "      <td>Pelicula</td>\n",
+       "      <td>https://filmzie.com/content/5-shells</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>Save the Princess</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>257 min</td>\n",
+       "      <td>Drama, Romance</td>\n",
+       "      <td>Nkemjika, an arrogant village flutist, loses h...</td>\n",
+       "      <td>Pelicula</td>\n",
+       "      <td>https://filmzie.com/content/save-the-princess-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>Divine</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3 min</td>\n",
+       "      <td>Animation</td>\n",
+       "      <td>This is the story of Divine, a history of stru...</td>\n",
+       "      <td>Pelicula</td>\n",
+       "      <td>https://filmzie.com/content/divine-2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>Bed and Breakfast</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>87 min</td>\n",
+       "      <td>Comedy, Drama</td>\n",
+       "      <td>In the style of Neil Simon and the feel of \"Th...</td>\n",
+       "      <td>Pelicula</td>\n",
+       "      <td>https://filmzie.com/content/bed-and-breakfast-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>Cabaret</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>111 min</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>A teenage kitesurfer from the Dominican Republ...</td>\n",
+       "      <td>Pelicula</td>\n",
+       "      <td>https://filmzie.com/content/cabaret-2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>Dhogs</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>85 min</td>\n",
+       "      <td>Comedy, Crime, Drama</td>\n",
+       "      <td>The intimacy of a hotel room. The immensity of...</td>\n",
+       "      <td>Pelicula</td>\n",
+       "      <td>https://filmzie.com/content/dhogs-2017</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>200 rows × 7 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "4585"
+       "                  titulo   ano duracion  \\\n",
+       "0          Dear Sidewalk  2013   86 min   \n",
+       "1                  C-Bar  2015    0 min   \n",
+       "2    Good Night Sarajevo  2014   52 min   \n",
+       "3              Tunnelrat  2008   17 min   \n",
+       "4               5 Shells  2012   87 min   \n",
+       "..                   ...   ...      ...   \n",
+       "195    Save the Princess  2022  257 min   \n",
+       "196               Divine  2019    3 min   \n",
+       "197    Bed and Breakfast  2023   87 min   \n",
+       "198              Cabaret  2019  111 min   \n",
+       "199                Dhogs  2017   85 min   \n",
+       "\n",
+       "                                 categorias  \\\n",
+       "0                    Comedy, Drama, Romance   \n",
+       "1                                   Western   \n",
+       "2          Documentary, European Production   \n",
+       "3    Drama, War, Short, European Production   \n",
+       "4                     Drama, Family, Sci-Fi   \n",
+       "..                                      ...   \n",
+       "195                          Drama, Romance   \n",
+       "196                               Animation   \n",
+       "197                           Comedy, Drama   \n",
+       "198                                   Drama   \n",
+       "199                    Comedy, Crime, Drama   \n",
+       "\n",
+       "                                           descripcion      tipo  \\\n",
+       "0    Dear Sidewalk tells the story of Gardner, a 24...  Pelicula   \n",
+       "1    After a young girl's family is brutally murder...     Serie   \n",
+       "2    Good night, Sarajevo: Bosnian journalist Boban...  Pelicula   \n",
+       "3    Amidst World War I, two enemy soldiers find th...  Pelicula   \n",
+       "4    In a post-apocalyptic wasteland, a young girl ...  Pelicula   \n",
+       "..                                                 ...       ...   \n",
+       "195  Nkemjika, an arrogant village flutist, loses h...  Pelicula   \n",
+       "196  This is the story of Divine, a history of stru...  Pelicula   \n",
+       "197  In the style of Neil Simon and the feel of \"Th...  Pelicula   \n",
+       "198  A teenage kitesurfer from the Dominican Republ...  Pelicula   \n",
+       "199  The intimacy of a hotel room. The immensity of...  Pelicula   \n",
+       "\n",
+       "                                                  link  \n",
+       "0       https://filmzie.com/content/dear-sidewalk-2013  \n",
+       "1               https://filmzie.com/content/c-bar-2015  \n",
+       "2      https://filmzie.com/content/good-night-sarajevo  \n",
+       "3           https://filmzie.com/content/tunnelrat-2008  \n",
+       "4                 https://filmzie.com/content/5-shells  \n",
+       "..                                                 ...  \n",
+       "195  https://filmzie.com/content/save-the-princess-...  \n",
+       "196            https://filmzie.com/content/divine-2019  \n",
+       "197  https://filmzie.com/content/bed-and-breakfast-...  \n",
+       "198           https://filmzie.com/content/cabaret-2019  \n",
+       "199             https://filmzie.com/content/dhogs-2017  \n",
+       "\n",
+       "[200 rows x 7 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Crear un diccionario para almacenar los resultados\n",
-    "json_pelioculas = {}\n",
-    "\n",
-    "with ThreadPoolExecutor(max_workers=num_nucleos) as executor:\n",
-    "    # Ejecutar la función para cada categoría en paralelo\n",
-    "    resultados = list(executor.map(movies, peliculas_total))\n",
-    "    \n",
-    "    # Asignar los resultados al diccionario\n",
-    "    for pelicula, resultado in zip(peliculas_total, resultados):\n",
-    "        json_pelioculas[pelicula] = resultado\n"
+    "dataframe"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
