Finalizacion del script de carga incremental

--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,10 +22,10 @@
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from selenium.common.exceptions import TimeoutException, NoSuchElementException\n",
     "\n",
-    "from Functions.funciones import movies_for_category, categories, print_process, movies, series_informacion, desempaquetado, generador_dummies\n",
+    "from Script.Function.funciones import movies_for_category, categories, print_process, movies, series_informacion, desempaquetado, generador_dummies\n",
     "\n",
     "# -------------- Parametros --------------\n",
-    "ruta_base = \"Bases_datos/\"\n",
+    "ruta_base = r\"Bases_datos/\"\n",
     "\n",
     "# ----------------------------------------"
    ]
@@ -198,9 +198,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'todo' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[47], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\u001b[43mtodo\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'todo' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df = pd.DataFrame(todo)"
    ]
@@ -217,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +384,7 @@
        "      <th>2200</th>\n",
        "      <td>Train Set</td>\n",
        "      <td>English</td>\n",
-       "      <td>No contiene subtitutlos</td>\n",
+       "      <td>No contiene subtitulos</td>\n",
        "      <td>2018</td>\n",
        "      <td>96</td>\n",
        "      <td>Comedy, Drama, Romance</td>\n",
@@ -435,18 +447,18 @@
        "2202                                       The Way Home  English   \n",
        "2203                             Robert Mitchum Is Dead  English   \n",
        "\n",
-       "                   subtitulos   ano  duracion_minutos  \\\n",
-       "0          English (embedded)  2020                23   \n",
-       "1         English, Portuguese  2017               104   \n",
-       "2                     English  2019               105   \n",
-       "3                     English  2011                34   \n",
-       "4                     English  2010                83   \n",
-       "...                       ...   ...               ...   \n",
-       "2199                  English  2023                81   \n",
-       "2200  No contiene subtitutlos  2018                96   \n",
-       "2201                  English  2013                90   \n",
-       "2202                  English  2010                90   \n",
-       "2203       English (embedded)  2013                91   \n",
+       "                  subtitulos   ano  duracion_minutos  \\\n",
+       "0         English (embedded)  2020                23   \n",
+       "1        English, Portuguese  2017               104   \n",
+       "2                    English  2019               105   \n",
+       "3                    English  2011                34   \n",
+       "4                    English  2010                83   \n",
+       "...                      ...   ...               ...   \n",
+       "2199                 English  2023                81   \n",
+       "2200  No contiene subtitulos  2018                96   \n",
+       "2201                 English  2013                90   \n",
+       "2202                 English  2010                90   \n",
+       "2203      English (embedded)  2013                91   \n",
        "\n",
        "                      categorias  \\\n",
        "0                   Short, Drama   \n",
@@ -490,13 +502,13 @@
        "[2204 rows x 9 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "peliculas"
+    "peliculas.head()"
    ]
   },
   {
@@ -925,7 +937,9 @@
    ],
    "source": [
     "# Exportamos base de datos de Peliculas con dummies\n",
-    "peliculas_dummies.to_csv(f\"{ruta_base}Peliculas_dummies.csv\",index=False)"
+    "peliculas_dummies.to_csv(f\"{ruta_base}Peliculas_dummies.csv\",index=False)\n",
+    "\n",
+    "peliculas_dummies.head()"
    ]
   },
   {
@@ -1273,7 +1287,7 @@
    ],
    "source": [
     "links_series = list(series[\"link\"].values)\n",
-    "links_series"
+    "links_series[:5]"
    ]
   },
   {
@@ -1902,7 +1916,7 @@
    ],
    "source": [
     "df_2 = pd.DataFrame(desempaquetado(resultados_dict))\n",
-    "df_2"
+    "df_2.head()"
    ]
   },
   {
@@ -2929,8 +2943,7 @@
    ],
    "source": [
     "series_descripcion = pd.merge(series,df_2, on=\"titulo\", how=\"inner\")\n",
-    "\n",
-    "series_descripcion"
+    "series_descripcion.head"
    ]
   },
   {
